--- a/department.css
+++ b/department.css
@@ -103,7 +103,7 @@ h4{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     margin-top: 60px;    
 }
 .cardd{
@@ -148,6 +148,8 @@ h4{
     font-size: 18px;
     font-weight: 500;
     color: #d82c90;
+    font-size: 20px;
+    font-family: 'Bree Serif', serif;
 }
 .p123 a:hover{
     color: #007b5e;
@@ -160,7 +162,7 @@ h4{
     height: 3px;
     position: relative;
     vertical-align: middle;
-    width: 13%;
+    width: 9%;
     right: .5em;
     margin-left: -50%;
 }
@@ -171,13 +173,17 @@ display: inline-block;
 height: 3px;
 position: relative;
 vertical-align: middle;
-width: 13%;
+width: 9%;
 left: .5em;
 margin-right: -50%;
 }
 #footer {
     background: #007b5e !important;
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    height: 100%;
+    padding-bottom: 80px;
+    padding-right: 50px;
 }
 #footer h5{
 	/* padding-left: 10px; */
@@ -243,17 +249,54 @@ margin-right: -50%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-   
-   
 }
 .map-card{
-    
     width: 100%;
     text-align: center;
     margin-top: 30px;
     box-shadow: 0 5px 5px 0 gray,0 -4px 15px 0 gray;
 }
 .map-card img{
-    width: 100%;
-    
+    width: 100%;   
+}
+.syllabus ul li{
+    font-size: 20px;
+}
+.syllabus ul li a{
+    text-decoration: none;
+    color:  #d82c90;
+    font-family: 'Bree Serif', serif;
+}
+.syllabus ul li a:hover{
+    color: #007b5e;
+}
+
+button {
+    margin: 25px 45%;
+	padding: 10px 20px;
+	cursor: pointer;
+	font-family: "Montserrat", sans-serif;
+	font-size: 20px;
+}
+#skew {
+    width:max-content;
+	border-radius: 20px 0px 20px 0px;
+	background-color: #007B5E;
+    font-family: 'Bree Serif', serif;
+    font-weight: 600;
+	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+	transition: border-radius 500ms ease, transform 500ms ease;
+}
+#skew a{
+    text-decoration: none;
+    color: #ffffff; 
+    letter-spacing: 4px;
+}
+#skew:hover {
+	border-radius: 0px 20px 0px 20px;
+	transform: skew(-10deg);
+}
+
+#skew:active {
+	transform: scale(0.9);
 }
