--- a/style.css
+++ b/style.css
@@ -268,6 +268,11 @@ section .section-title {
 }
 #footer {
     background: #007b5e !important;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    height: 100%;
+    padding-bottom: 80px;
+    padding-right: 50px;
 }
 #footer h5{
 	/* padding-left: 10px; */
