--- a/noticestyle.css
+++ b/noticestyle.css
@@ -14,8 +14,8 @@
 } 
 .timeicon{
     position: relative;
-    width: 5em;
-    height: 5em;
+    width: 4em;
+    height: 4em;
     background-color: #fff;
     margin: 0 auto;
     border-radius: .6em;
@@ -38,12 +38,12 @@
     font-weight: 700;
     font-style: normal;
     text-align: center;
-    font-size: .8em;
+    font-size: .7em;
     display:block
 }
 .date{
     width: 100%;
-    font-size: 2em;
+    font-size: 1.8em;
     letter-spacing: -.05em;
     padding-top: .8em;
     color: #2f2f2f;
@@ -59,17 +59,18 @@
     text-decoration: none;
     color: black;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 16px;
+    text-transform: capitalize;
 }
 .d-flex a{
-    font-size: 40px;
+    font-size: 20px;
     color: #CC4B69;
     position:absolute ;
 }
 .aline{
     width: 100%;
     height:1px;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     background: linear-gradient(to right, transparent, rgb(0, 0, 0), transparent);
 }
